# agent-cell-poc

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
db/: init.sql
docker/flink/: Dockerfile
src/: config.py  embeddings.py  server.py
src/cell/: agent_cell.py  consumer.py  flink_runtime.py  kafka_tools.py  knowledge.py  nucleus.py  orchestrator.py
src/cli/: main.py
src/producers/: anomalies.py  device_status.py  devices.py  netflow.py  run.py  syslog.py
src/viz/: dashboard.py  server.py  templates.py
